# DVS_Detekcja_przeszkod_Roman_Nowak

./: README.md  kamera.tex  podsumowanie.tex  symulacja.tex  wprowadzenie.tex  wstep.tex
kod/bag_processing/: bag2json.mlx  events_frames.mlx
kod/gazabo_simulation/: simulation.sdf
kod/gazabo_simulation/gazebo/worlds/: default.sdf
kod/gazabo_simulation/gz/: Readme.md
kod/gazabo_simulation/gz/models/x500/: model.sdf
kod/gazabo_simulation/gz/worlds/: default.sdf  default.sdf.tmp  people_day.sdf  people_night.sdf  trees_day.sdf  trees_night.sdf
kod/gazabo_simulation/gz/worlds/Metal Peg/: model.sdf
kod/gazabo_simulation/gz/worlds/Wooden Peg/: model.sdf
kod/gazabo_simulation/ros2_ws/src/drone_sim/: package.xml  setup.py
kod/gazabo_simulation/ros2_ws/src/drone_sim/drone_sim/: control.py  dvs.py  dvs_detect.py  dvs_display.py  generate_obstacles.py  my_config.py  param_control.py  processes.py
kod/gazabo_simulation/ros2_ws/src/drone_sim/launch/: drone_sim.launch.py
kod/gazabo_simulation/ros2_ws/src/drone_sim/modules/: dvs_obstacles_detector.py  generate_obstacles.py  rht.py
kod/gazabo_simulation/ros2_ws/src/drone_sim/tests/: detection_test.py  detection_test_old.py  gpu_test.py  v2e_test.py
latex/: abstract.tex  aghdpl.cls  algorytm.tex  bibliografia.bib  fpga.tex  implementacja.tex  kamera.tex  literatura.tex  podsumowanie.tex  praca-blx.bib  praca.tex  symulacja_gazebo.tex  wprowadzenie.tex  wstep.tex  wyniki.tex
literatura/3 Processing obrazu/RHT/: RANDOMIZED HOUGH TRANSFORM WITH MINIMAL MEMORY  Randomized Hough Transform
(+4 files in other folders)
