<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_sim</name>
  <version>0.0.0</version>
  <description>ROS2 PX4 Interface Velocity Control</description>
  <maintainer email="braden@arkelectron.com">braden</maintainer>
  <license>BSD-3</license>
  
  <depend>px4_msgs</depend>
  <depend>gz</depend>
  <depend>event_camera_msgs</depend>
  <depend>events_msgs</depend>
  <depend>gz.gz_events_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
